tests/typechecker/pass/005-if.hyg
if (32 < 11 and not (5 < 1)) then 1.0f else 2.0f // Comment
