tests/typechecker/fail/005-if.hyg
if (1 + 3) then 1.0f else 2.0f
